@@ -1,3 +1,9 @@
+2002-04-30  Yoann Vandoorselaere  <yoann@mandrakesoft.com>
+
+	* plugins/simple/simple.c: included patch from
+	Arnaud Guignard <arnaud.guignard@free.fr> to handle 
+	IDMEF source node address.
+
 2002-04-29  Yoann Vandoorselaere  <yoann@mandrakesoft.com>
 
 	* plugins/simple/ruleset/netfilter.rules:
